fix menu button visibility, only show players link if a team has already been created, switch ids to class

--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -371,13 +371,17 @@ nav a:focus {
   }
 }
 
-#new-player-side-link,
+.new-player-side-link,
 #new-team-side-link,
 #edit-team-side-link {
   color:  $steel;
   &:hover {
     color: #FFF;
   }
+}
+
+.new-player-side-link {
+  color: #FFF !important;
 }
 
 .bottom-hilight {
